modules/gdscript/tests/scripts/analyzer/errors/assign_to_read_only_property.gd
func test():
	var tree := SceneTree.new()
	tree.root = Window.new()
	tree.free()
